<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:text="@string/app_description"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp"/>

    <Button
        android:id="@+id/app1"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/heading"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@color/buttonColor"
        android:padding="15dp"
        android:text="@string/sub_app1"
        android:textColor="@color/white"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/app2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/app1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@color/buttonColor"
        android:padding="15dp"
        android:text="@string/sub_app2"
        android:textColor="@color/white"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/app3"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/app2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@color/buttonColor"
        android:padding="15dp"
        android:text="@string/sub_app3"
        android:textColor="@color/white"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/app4"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/app3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@color/buttonColor"
        android:padding="15dp"
        android:text="@string/sub_app4"
        android:textColor="@color/white"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/app5"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/app4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@color/buttonColor"
        android:padding="15dp"
        android:text="@string/sub_app5"
        android:textColor="@color/white"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/app6"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/app5"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="#EF5350"
        android:padding="15dp"
        android:text="@string/sub_app6"
        android:textColor="@color/white"
        android:textSize="20sp"/>

</RelativeLayout>
